# ai-wrapper

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: architect.py  base.py  debug.py  file_generator.py  improvement.py  orchestrator.py  planner.py
backend/app/api/: auth.py  projects.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: deployment.py  sandbox.py
backend/tests/: test_agents.py  test_api.py  test_schemas.py  test_security.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/components/: CodeEditor.tsx  FileExplorer.tsx  PreviewPanel.tsx  ProjectList.tsx  PromptInput.tsx
frontend/src/lib/: api.ts
